<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment android:id="@+id/nav_number_converter"
        android:name="com.example.navigationdrawer.ui.converter.NumberConverterFragment"
        android:label="@string/number_converter"
        tools:layout="@layout/fragment_number_converter" />

    <fragment android:id="@+id/nav_calculator"
        android:name="com.example.navigationdrawer.ui.calculator.CalculatorFragment"
        android:label="@string/calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment android:id="@+id/nav_unit_converter"
        android:name="com.example.navigationdrawer.ui.converter.UnitConvertFragment"
        android:label="@string/unit_converter"
        tools:layout="@layout/fragment_convert_unit" />
</navigation>